# advent-of-code-2019

./: .devcontainer.json  README.md  aoc.cabal  compose.yaml
source/executable/: D01.hs  Linear.hs  Main.hs
