cabal-version: >= 1.10

name: aoc
version: 2019

build-type: Simple
extra-source-files: README.md
license-file: LICENSE.txt
license: MIT

source-repository head
  location: https://github.com/tfausak/advent-of-code-2019
  type: git

executable aoc
  build-depends:
    base >= 4.17.0 && < 4.18
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
  hs-source-dirs: source/executable
  main-is: Main.hs
  other-modules:
    D01
    Linear
